--- a/main/site6.html
+++ b/main/site6.html
@@ -169,36 +169,39 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>                        <div class="row">
-                        <div class="col-xl-6 col-md-6 col-12">
-                            <div class="box pull-up">
-                                <div class="box-body">
-                                    <div class="d-flex align-items-center justify-content-between">
-                                        <div style="color: #ffa014; margin: auto">
-                                            <h5 class="mb-0" style="font-size: small">
-                                                مخلفات تصلح للمعالجة
-                                            </h5>
-                                            <h2 id="s6-accepted-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <div style="color: #ffa014; margin: auto">
+                                                <h5 class="mb-0" style="font-size: small">
+                                                    مخلفات تصلح للمعالجة
+                                                </h5>
+                                                <h2 id="s6-accepted-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <div style="color: #d81415; margin: auto">
+                                                <h5 class="mb-0" style="font-size: small">
+                                                    مخلفات لا تصلح للمعالجة
+                                                </h5>
+                                                <h2 id="s6-rejected-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-md-6 col-12">
-                            <div class="box pull-up">
-                                <div class="box-body">
-                                    <div class="d-flex align-items-center justify-content-between">
-                                        <div style="color: #d81415; margin: auto">
-                                            <h5 class="mb-0" style="font-size: small">
-                                                مخلفات لا تصلح للمعالجة
-                                            </h5>
-                                            <h2 id="s6-rejected-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                         <div class="row">
                             <div class="col-xl-6 col-md-6 col-12">
@@ -211,7 +214,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="accepted_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="accepted_per"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -228,7 +232,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المرفوضات من المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="rejected_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="rejected_per"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -248,6 +253,10 @@
                                 <h2 style="font-size: 21px;margin-bottom: 22px;">تغيير الكميات التراكمية والنسب من
                                     المخلفات الصالحة للمعالجة
                                     لليوم</h2>
+                                <div class="d-flex justify-content-center" style="margin: 12px;">
+                                    <div class="spinner-border" id="operationsEditLoader">
+                                    </div>
+                                </div>
                                 <span style="position:absolute;font-size:medium;right: 175px">النسبة</span>
                                 <span style="position:absolute;font-size:medium;right: 275px">الكمية المتراكمة</span>
                                 <div class="row" style="margin-top: 55px;">
@@ -263,7 +272,7 @@
                                 <div class="d-flex flex-column">
 
                                     <h5 class="fs-4 " style="color: #003F5C; font-weight: bold; margin: auto">
-                                        تحت التشغيل اليوم
+                                        تحت التشغيل
                                     </h5>
                                     <button id="openOperationPopupBtn">تعديل</button>
                                     <div class="d-flex justify-content-between" style="color: #10d6b4">
@@ -320,47 +329,12 @@
                                         <div
                                                 class="d-flex align-items-center justify-content-between"
                                         >
-                                            <div style="color: #2da075; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    اسمدة عضوية
-                                                </h5>
-                                                <h2 id="s6-asmeda-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
-                                            <div style="color: #1427c9; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    وقود بديل
-                                                </h5>
-                                                <h2 id="s6-waqood-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
                                             <div style="color: #10d6b4; margin: auto">
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مرفوضات
                                                 </h5>
-                                                <h2 id="s6-marfoodat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s6-marfoodat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -377,7 +351,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مفروزات
                                                 </h5>
-                                                <h2 id="s6-mafroozat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s6-mafroozat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -385,6 +360,46 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="row">
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #2da075; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    اسمدة عضوية
+                                                </h5>
+                                                <h2 id="s6-asmeda-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #1427c9; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    وقود بديل
+                                                </h5>
+                                                <h2 id="s6-waqood-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="col-xl-4 col-12" `>
