--- a/main/index.html
+++ b/main/index.html
@@ -174,7 +174,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="tot-accepted-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="tot-accepted-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -188,7 +189,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="tot-rejected-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="tot-rejected-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -208,7 +210,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="accepted_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="accepted_per"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -224,7 +227,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المرفوضات من المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="rejected_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="rejected_per"></h2>
                                             </div>
                                             <!--                                    <img src="../images/trash.png" alt="" style="height: 62px">-->
                                         </div>
@@ -240,26 +244,28 @@
                             <div class="box-body">
                                 <div class="d-flex flex-column">
 
-                                    <h5 class="fs-4 " style="color: #003F5C; font-weight: bold; margin: auto auto 28px;">
-                                        تحت التشغيل اليوم
+                                    <h5 class="fs-4 "
+                                        style="color: #003F5C; font-weight: bold; margin: auto auto 28px;">
+                                        تحت التشغيل
                                     </h5>
-                                    <div class="d-flex justify-content-between" style="color: #2da075">
-                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية</span>
-                                        <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
-                                    </div>
+                                    <!--                                    <div class="loader"></div>-->
                                     <div class="d-flex justify-content-between" style="color: #10d6b4">
                                         <span class="operations-label fs-4 fw-500">مرفوضات</span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="marfoodat-operation-weight"></span>
                                     </div>
-                                    <div class="d-flex justify-content-between" style="color: #1427c9">
-                                        <span class="operations-label fs-4 fw-500">وقود بديل</span>
-                                        <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
-                                    </div>
                                     <div class="d-flex justify-content-between" style="color: #85a6e9">
                                         <span class="operations-label fs-4 fw-500">مفروزات</span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="mafroozat-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #2da075">
+                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية</span>
+                                        <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #1427c9">
+                                        <span class="operations-label fs-4 fw-500">وقود بديل</span>
+                                        <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
                                     </div>
                                 </div>
                             </div>
@@ -286,42 +292,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
-                                            <div style="color: #2da075; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    اسمدة عضوية
-                                                </h5>
-                                                <h2 id="tot-asmeda-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
-                                            <div style="color: #1427c9; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    وقود بديل
-                                                </h5>
-                                                <h2 id="tot-waqood-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="row">
                             <div class="col-xl-6 col-md-6 col-12">
                                 <div class="box pull-up">
@@ -333,7 +304,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مرفوضات
                                                 </h5>
-                                                <h2 id="tot-marfoodat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="tot-marfoodat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -350,7 +322,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مفروزات
                                                 </h5>
-                                                <h2 id="tot-mafroozat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="tot-mafroozat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -358,6 +331,46 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="row">
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #2da075; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    اسمدة عضوية
+                                                </h5>
+                                                <h2 id="tot-asmeda-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #1427c9; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    وقود بديل
+                                                </h5>
+                                                <h2 id="tot-waqood-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="col-xl-12 col-12">
@@ -396,7 +409,7 @@
                         <div class="box">
 
                             <div style="right: 84%;top: 35px;">
-                                <button id="openPopupBtn">تغيير الكميات المستهدفة</button>
+                                <button id="openCentersTargetsPopupBtn">تغيير الكميات المستهدفة</button>
                             </div>
                             <div id="popupContainer" class="popup">
                                 <div class="popup-content">
@@ -404,6 +417,10 @@
                                     <h2 style="font-size: 21px;">
                                         تغيير الكميات المستهدفة يوميا لمدخلات لكل مركز
                                     </h2>
+                                    <div class="d-flex justify-content-center" style="margin: 12px;">
+                                        <div class="spinner-border" id="targetsEditLoader">
+                                        </div>
+                                    </div>
                                     <form id="targetsForm">
                                     </form>
                                 </div>
@@ -464,11 +481,6 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>-->
 <script src="../assets/vendor_components/moment/moment.js"></script>
 <script src="../assets/vendor_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-
-<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>-->
-<!--<script src="https://unpkg.com/daterangepicker@3.0.0/daterangepicker.min.js"></script>-->
-<!--<script src="../assets/vendor_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>-->
-<!--<script src="../assets/vendor_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>-->
 
 <!-- Florence Admin App -->
 <script src="js/template.js"></script>
