--- a/main/site1.html
+++ b/main/site1.html
@@ -171,7 +171,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>                        <div class="row">
+                        </div>
+                        <div class="row">
                             <div class="col-xl-6 col-md-6 col-12">
                                 <div class="box pull-up">
                                     <div class="box-body">
@@ -180,7 +181,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="s1-accepted-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s1-accepted-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -194,7 +196,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="s1-rejected-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s1-rejected-ip-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +216,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="accepted_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="accepted_per"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -230,7 +234,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المرفوضات من المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="rejected_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="rejected_per"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -250,6 +255,10 @@
                                 <h2 style="font-size: 21px;margin-bottom: 22px;">تغيير الكميات التراكمية والنسب من
                                     المخلفات الصالحة للمعالجة
                                     لليوم</h2>
+                                <div class="d-flex justify-content-center" style="margin: 12px;">
+                                    <div class="spinner-border" id="operationsEditLoader">
+                                    </div>
+                                </div>
                                 <span style="position:absolute;font-size:medium;right: 175px">النسبة</span>
                                 <span style="position:absolute;font-size:medium;right: 275px">الكمية المتراكمة</span>
                                 <div class="row" style="margin-top: 55px;">
@@ -265,7 +274,7 @@
                                 <div class="d-flex flex-column">
 
                                     <h5 class="fs-4 mb-0" style="color: #003F5C; font-weight: bold; margin: auto">
-                                        تحت التشغيل اليوم
+                                        تحت التشغيل
                                     </h5>
                                     <button id="openOperationPopupBtn">تعديل</button>
                                     <div class="d-flex justify-content-between" style="color: #10d6b4">
@@ -314,43 +323,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
-                                            <div style="color: #2da075; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    اسمدة عضوية
-                                                </h5>
-                                                <h2 id="s1-asmeda-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-12">
-                                <div class="box pull-up">
-                                    <div class="box-body">
-                                        <div
-                                                class="d-flex align-items-center justify-content-between"
-                                        >
-                                            <div style="color: #1427c9; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
-                                                    وقود بديل
-                                                </h5>
-                                                <h2 id="s1-waqood-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
-                                            </div>
-                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-xl-6 col-md-6 col-12">
                                 <div class="box pull-up">
@@ -362,7 +334,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مرفوضات
                                                 </h5>
-                                                <h2 id="s1-marfoodat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s1-marfoodat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -379,7 +352,46 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مفروزات
                                                 </h5>
-                                                <h2 id="s1-mafroozat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 id="s1-mafroozat-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #2da075; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    اسمدة عضوية
+                                                </h5>
+                                                <h2 id="s1-asmeda-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                            </div>
+                                            <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box pull-up">
+                                    <div class="box-body">
+                                        <div
+                                                class="d-flex align-items-center justify-content-between"
+                                        >
+                                            <div style="color: #1427c9; margin: auto">
+                                                <h5 class="mb-0" style="font-size: medium">
+                                                    وقود بديل
+                                                </h5>
+                                                <h2 id="s1-waqood-op-box"
+                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
